--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homme":"https://nada-samadi1.github.io/tp-2-react/",
+{"homme":"https://nada-samadi1.github.io/tp-2-react",
   "name": "tp-slider",
   "version": "0.1.0",
   "private": true,
